fixing overflowing on mobile devices

--- a/style/708090_page.css
+++ b/style/708090_page.css
@@ -572,7 +572,7 @@ body {
         overflow-y: auto;
         justify-content: flex-start;
         padding-top: 100px;
-        padding-bottom: 40px;
+        padding-bottom: 80px;
     }
 
     .decades-grid {
