--- a/style/edm_page.css
+++ b/style/edm_page.css
@@ -417,7 +417,7 @@ body {
         overflow-y: auto;
         justify-content: flex-start;
         padding-top: 100px;
-        padding-bottom: 40px;
+        padding-bottom: 80px;
     }
 
     .decades-grid {
