--- a/style/house_feeling_page.css
+++ b/style/house_feeling_page.css
@@ -398,7 +398,7 @@ body {
         overflow-y: auto;
         justify-content: flex-start;
         padding-top: 100px;
-        padding-bottom: 40px;
+        padding-bottom: 80px;
     }
 
     .decades-grid {
